# SoftRenderer

./: CMakeLists.txt  readme.md
assets/scene0/: scene0_config.txt
cmake/modules/: FindSDL2.cmake
include/: aabb.h  camera.h  frame_buffer.h  global_config.h  light.h  math_util.h  matrix.h  mesh.h  pipeline.h  scene.h  shader.h  shadow_map.h  skybox.h  texture.h  vector.h  vertex.h  window.h
src/: aabb.cpp  camera.cpp  frame_buffer.cpp  light.cpp  main.cpp  mesh.cpp  pipeline.cpp  scene.cpp  shader.cpp  shadow_map.cpp  skybox.cpp  texture.cpp  window.cpp
